# Begin_OpenGl

./: CMakeLists.txt  README.md  main.cpp
include/: shader.h
include/glad/: glad.h
lib/: libglfw.so.3.4
src/: glad.c  main.cpp  main.h  shader.cpp
src/shaders/: shader.fs  shader.vs
